--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "deasync": "^0.1.13",
     "electron": "^4.1.1",
     "eslint": "^4.19.1",
