--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "mocha": "*",
     "quoted-printable": "^1.0.1",
     "request": "^2.85.0",
-    "request-promise": "^4.2.2",
+    "request-promise": "^4.2.4",
     "selenium-standalone": "^6.14.0",
+    "uuid.v4": "^1.0.0",
     "wdio-allure-reporter": "^0.8.3",
     "wdio-mocha-framework": "^0.5.13",
     "wdio-sauce-service": "~0.1",
